<resources>
    <string name="app_name">ChenthuranLab2</string>
    <string name="Header">Lease or Rent Home Inc.</string>
    <string name="hometype">Please select a type of House, from the options menu in the top right corner</string>
    <string name="apartment">Apartments</string>
    <string name="detachedhome">Detached homes</string>
    <string name="semidetachedhome">Semi-Detached Homes</string>
    <string name="condo">Condominiums</string>
    <string name="townhouse">Town Houses</string>
    <string name="button">Enter</string>
    <string name="apartmentHeader">Apartments</string>
    <string name="apartmentaddy1">15 Water Walk Dr, Markham,ON</string>
    <string name="apartmentaddy1details"> 1 Bed, 1 Bath </string>
    <string name="apartmentaddy1price">$1,850/month</string>
    <string name="apartmentaddy2">325 South Park Rd, Markham,ON</string>
    <string name="apartmentaddy2details">2 Beds, 1 Bath</string>
    <string name="apartmentaddy2price">$1,980/month</string>
    <string name="apartmentaddy3">33 Charles St E,Toronto, Ontario</string>
    <string name="apartmentaddy3details">1 bed, 1 Bath</string>
    <string name="apartmentaddy3price">$2,495</string>
    <string name="apartmentaddy4">60 Brian Harrison Way,Toronto,ON</string>
    <string name="apartmentaddy4details">1 Bed, 1 Bath</string>
    <string name="apartmentaddy4price">$2,050/month</string>
    <string name="apartmentaddy5">636 Park Lawn Rd,Toronto,ON</string>
    <string name="apartmentaddy5details">2 Beds, 2 Baths</string>
    <string name="apartmentaddy5price">$2,500/month</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nextBtn">Next</string>
    <string name="condoHeading">Condominuims</string>
    <string name="condoAddy1">25 Gloucester St</string>
    <string name="Condoaddy1desc">2 Beds, 2 Baths</string>
    <string name="condo1price">$2,850,000</string>
    <string name="condo2addy">1012-333 Adelaide St E</string>
    <string name="condo2desc">2 Beds, 2 Baths</string>
    <string name="condo2price">$895,000</string>
    <string name="condo3">1603-1346 Danforth rd</string>
    <string name="condo3desc">2 Beds, 2 Baths</string>
    <string name="condo3price">$519,000</string>
    <string name="condoaddy4">1101-32 Trolley Cres</string>
    <string name="condo4desc">1 Bed, 1 Bath</string>
    <string name="condo4price">$575,000</string>
    <string name="condo5">295 Clinton st</string>
    <string name="condo5desc">1 Bed, 1 Bath</string>
    <string name="condo5price">$1,399,000</string>
    <string name="condonxtBtn">Next</string>
    <string name="detachedHeading">Detached Homes</string>
    <string name="detachedaddy1">46 Havagal Cres</string>
    <string name="detachedaddy1desc">4 Beds, 5 Baths</string>
    <string name="detachedaddy1Price">$1,849,000</string>
    <string name="detachedaddy2">248 Kennedy Rd</string>
    <string name="detachedaddy2desc">3 Beds, 4 Baths</string>
    <string name="detachedaddy2price">$1,330,000</string>
    <string name="detachedaddy3">53 Birch Ave</string>
    <string name="detachedaddy3desc">5 Beds, 6 Baths</string>
    <string name="detachedaddy3price">$3,699,000</string>
    <string name="detachedaddy4">770 Morrish Rd</string>
    <string name="detachedaddy4desc">6 Beds, 4 Baths</string>
    <string name="detachedaddy4price">$1,199,000</string>
    <string name="detachedaddy5">241 Gowrie St</string>
    <string name="detachedaddy5desc">2 Beds, 2 Baths</string>
    <string name="detachedaddy5price">$1,199,000</string>
    <string name="detachednxtbtn">Next</string>
    <string name="semidetachedheading">Semi-Detached</string>
    <string name="semideta1">Cornell, On</string>
    <string name="chensemiaddy1desc"> 3 Beds, 3 Baths</string>
    <string name="semiaddy1price">$728,000</string>
    <string name="chensemiaddy2">17 Jackson Eli, Markham,ON</string>
    <string name="semiaddy2desc">4 Beds, 3 Baths</string>
    <string name="semiaddy2price">$799,000</string>
    <string name="semiaddy3">Markham,ON</string>
    <string name="semiaddy3desc">3 Beds, 3 Baths</string>
    <string name="semiaddy3price">$900,000</string>
    <string name="semiaddy4">14 Saville Crt, Markham,ON</string>
    <string name="semiaddy4desc"> 4 Beds, 4 Baths</string>
    <string name="semiaddy4price">$1,100,000</string>
    <string name="semiaddy5">19 Fieldside Street,Markham,ON</string>
    <string name="semiaddy5desc">4 Beds, 3 Baths</string>
    <string name="chensemiaddy5price">$3,000,000</string>
    <string name="chenseminxtbtn">Next</string>
    <string name="townhouseheading">Town Houses</string>
    <string name="townhouse1">60 Homewood Ave, Toronto,ON</string>
    <string name="chentowndes1">2 Beds, 3 Baths</string>
    <string name="chentown1price">$950,000</string>
    <string name="chentown2">5 Everson Dr, Toronto,ON</string>
    <string name="chentown2desc">2 Beds, 2 Baths</string>
    <string name="chentown2price">$660,000</string>
    <string name="chentown3">1180 Sandhurst Circ,Toronto,ON</string>
    <string name="chentown3desc">3 Beds, 2 Baths</string>
    <string name="chentown3price">$599,900</string>
    <string name="chentown4">200 Murison Blvd, Toronto, ON</string>
    <string name="chentown4desc">3 Beds, 2 Baths</string>
    <string name="chentown4price">$596,000</string>
    <string name="chentown5">593 Kenndy Road,Toronto,ON</string>
    <string name="chentown5desc">2 Beds, 2 Baths</string>
    <string name="chentown5price">$489,000</string>
    <string name="chentownnxtbtn">Next</string>
    <string name="checkoutheader">Checkout</string>
    <string name="houseselectionheader">Choose the Home, You would like to Buy</string>
    <string name="paymentHeading">Select Your Method of Payment</string>
    <string name="cashpayment">Cash</string>
    <string name="creditpayment">Credit</string>
    <string name="debitpayment">Debit</string>
    <string name="checkoutbtn">Check Out!</string>
    <string name="chencheckoutinputheading">Welcome to the Checkout</string>
    <string name="customerinfo">Please Enter the following Info Below</string>
    <string name="submitbutton">Submit</string>
    <string name="enterfullnamehere"> Enter Full Name</string>
    <string name="entercardnumber">Enter Card Number</string>
    <string name="enterfavsport">Enter your favourite sport</string>
    <string name="inputfavouriteseason">What is your favourite Season?</string>


</resources>